# jaka_robot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
jaka_description/config/: jaka_zu5_urdf.rviz
jaka_description/launch/: jaka_zu5_rviz_control_launch.py
jaka_description/urdf/: camera.gazebo  camera.xacro  gripper.xacro  jaka_zu5.gazebo  jaka_zu5.urdf  jaka_zu5.xacro  my_gripper.xacro  my_robot.urdf.xacro  ros2_control.xacro
jaka_driver/include/jaka_driver/: conversion.h
jaka_driver/launch/: robot_start.launch.py
jaka_driver/src/: jaka_driver.cpp
jaka_msgs/: CMakeLists.txt
jaka_msgs/msg/: MyPoseCmd.msg
jaka_planner/launch/: moveit_server.launch.py
jaka_planner/src/: moveit_server.cpp  moveit_test.cpp
jaka_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jaka_robot_moveit_config/config/: initial_positions.yaml  jaka_zu5.ros2_control.xacro  jaka_zu5.srdf  jaka_zu5.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
jaka_robot_moveit_config/launch/: config_arguments.launch.py  demo.launch.py  gazebo_ros_bridge.launch.py  gazebo_world.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_launch_utils.py  rsp.launch.py  rviz_gazebo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
jaka_zu5_moveit_config/: CMakeLists.txt  package.xml
jaka_zu5_moveit_config/config/: jaka_zu5.srdf  ros2_controllers.yaml
jaka_zu5_moveit_config/launch/: demo.launch.py  gazebo_with_vel.launch.py  spawn_controllers.launch.py
jaka_zu5_moveit_config/scripts/: cmd_vel_control.py
log/: latest_build
my_jaka_zu5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_jaka_zu5_moveit_config/config/: initial_positions.yaml  jaka_robot.ros2_control.xacro  jaka_robot.srdf  jaka_robot.urdf.xacro  jaka_zu5.ros2_control.xacro  jaka_zu5.srdf  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
my_jaka_zu5_moveit_config/launch/: config_arguments.launch.py  demo.launch.py  gazebo_world.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_launch_utils.py  rsp.launch.py  rviz_gazebo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
user_commands/: CMakeLists.txt  package.xml
user_commands/launch/: sim_ui.launch.py  ui.launch.py
user_commands/script/: joint_move_ui.py  linear_move_ui.py  main_window.py  new_joint_move.py  new_linear_move.py  new_main_window.py  real_joint_move.py  real_linear_move.py  real_main_window.py  sim_gripper_ui.py  sim_joint_move_ui.py  sim_linear_move_ui.py  sim_main_window.py  ui.py  virtual_linear_move.py  virtual_main_window.py  virtual_ui.py
user_commands/src/: gripper_mimic.cpp  moveit_client.cpp  my_moveit.cpp  rob_shutdown.cpp  temp.cpp
user_commands/world/: my_world.sdf  sim_world.sdf
